# voice-assistant

./: .gitignore  README.md  chat_service.py  main.py  project_config.py  pyproject.toml  render.yaml  requirements.txt  simple_test.py  test.py  test_conversation.py  test_env.py  test_voice_assistant.py
assistant/: assistant_controller.py  assistant_service.py
audio_handling/: audio_generation_service.py  audio_transcription_service.py
static/css/: style.css
static/js/: main.js
templates/: index.html
transcoding/: transcoding_services.py
utils/: file_utils.py
