[tool.poetry]
name = "pythonproject2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
openai = "^1.54.4"
langchain = "^0.3.7"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
boto3 = "^1.35.63"
python-dotenv = "^1.0.1"
starlette = "^0.41.2"
langchain-community = "^0.3.7"
langchain-openai = "^0.2.8"
python-multipart = "^0.0.17"
ffmpeg = "^1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
